# peat-gateway

./: .gitignore  Cargo.toml  Dockerfile
.github/workflows/: build-pr.yml  ecr-build.yml
src/: config.rs  lib.rs  loadtest.rs  main.rs  mesh_ingest.rs
src/api/: formations.rs  mod.rs
src/cdc/: watcher.rs
src/crypto/: mod.rs
tests/: admin_auth_tests.rs  api_tests.rs  cdc_watcher_tests.rs  error_recovery_tests.rs  formations_tests.rs  hardening_tests.rs  identity_tests.rs  isolation_tests.rs  kms_tests.rs  migrate_keys_tests.rs  nats_sink_tests.rs  oidc_mock_tests.rs  p1_completeness_tests.rs  p2_robustness_tests.rs  postgres_tests.rs  remote_broker_integration_tests.rs  vault_tests.rs  webhook_sink_tests.rs
