[package]
name = "peat-gateway"
version = "0.1.0"
edition = "2021"
authors = ["Kit Plummer <kitplummer@defenseunicorns.com>"]
license = "Apache-2.0"
description = "Enterprise control plane for Peat mesh — multi-org tenancy, CDC, IDAM federation"
repository = "https://github.com/defenseunicorns/peat-gateway"
homepage = "https://github.com/defenseunicorns/peat-gateway"
keywords = ["mesh", "gateway", "crdt", "cdc", "multi-tenant"]
categories = ["network-programming"]

[lib]
name = "peat_gateway"
path = "src/lib.rs"

[[bin]]
name = "peat-gateway"
path = "src/main.rs"

[dependencies]
# Mesh networking
peat-mesh = { version = "0.5", features = ["automerge-backend", "broker"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Web framework (admin API)
axum = { version = "0.7", features = ["macros"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["cors", "trace", "timeout", "fs"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# CLI
clap = { version = "4", features = ["derive"] }

# Utilities
anyhow = "1"
async-trait = "0.1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
rand_core = { version = "0.6", features = ["getrandom"] }
hex = "0.4"

# Envelope encryption
aes-gcm = "0.10"
zeroize = "1.8"
base64 = { version = "0.22", optional = true }

# CDC sinks (optional)
async-nats = { version = "0.38", optional = true }
rdkafka = { version = "0.37", features = ["cmake-build"], optional = true }
reqwest = { version = "0.12", features = ["json"], optional = true }
tempfile = { version = "3", optional = true }

# KMS (optional)
aws-sdk-kms = { version = "1", optional = true }
aws-config = { version = "1", features = ["behavior-version-latest"], optional = true }

# Identity (optional)
openidconnect = { version = "4", optional = true }

# Storage
redb = "2.4"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "json", "migrate"], optional = true }

# Metrics
metrics = "0.24"
metrics-exporter-prometheus = "0.16"

[features]
default = ["nats", "webhook", "oidc", "mesh-broker-client"]
nats = ["dep:async-nats"]
kafka = ["dep:rdkafka"]
webhook = ["dep:reqwest"]
oidc = ["dep:reqwest"]
postgres = ["dep:sqlx"]
aws-kms = ["dep:aws-sdk-kms", "dep:aws-config"]
vault = ["dep:reqwest", "dep:base64"]
mesh-broker-client = ["dep:reqwest"]
full = ["nats", "kafka", "webhook", "oidc", "postgres", "aws-kms", "vault", "mesh-broker-client"]
loadtest = ["dep:reqwest", "dep:tempfile"]

# Patch n0-snafu to fix color-backtrace 0.7.3 API break:
# is_dependency_code() was removed from Frame in 0.7.3; our vendored copy
# replaces the call with is_post_panic_code() + is_runtime_init_code().
[patch.crates-io]
n0-snafu = { path = "vendor/n0-snafu" }

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util", "macros"] }
tempfile = "3"
reqwest = { version = "0.12", features = ["json"] }
async-nats = "0.38"
futures = "0.3"
peat-mesh = { version = "0.5", features = ["automerge-backend"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres"] }
base64 = "0.22"
hex = "0.4"
